tree-sitter-hcl2/test/corpus/resources.txt
===
A resource with basic attributes
===


resource "aws_instance" "example" {
  ami           = "XYZ-2757f631"
  foo_t           = true
  bar_f           = false
  num             = 987654321
  many            = ["one", "two"]
  ref             = var.lambda_deployment_role_id
}

---

(configuration
  (resource
    (resource_type)
    (resource_name)
    (block
      (attribute (identifier) (string_literal))
      (attribute (identifier) (boolean))
      (attribute (identifier) (boolean))
      (attribute (identifier) (number))
      (attribute (identifier) (list (string_literal) (string_literal)))
      (attribute (identifier) (reference))
      )))

===
a resource with a block attribute
===


resource "aws_instance" "example" {
  example {
    foo = "bar"
  }
}


---

(configuration
  (resource
    (resource_type)
    (resource_name)
    (block
      (attribute
        (named_map (identifier) (map
                                  (attribute (identifier) (string_literal))))))))

===
a resource with a function value
===

resource "aws_security_group" "main" {
  tags   = merge(var.default_tags, { Name = "gladis-api" })
}

---

(configuration
  (resource
    (resource_type)
    (resource_name)
    (block
      (attribute (identifier) (function (fn_param (reference)) (fn_param (map (attribute (identifier) (string_literal)))))))))


===
length function
===


resource "aws_security_group" "main" {
  tags   = length(var.default_tags)
}

---

(configuration
  (resource
    (resource_type)
    (resource_name)
    (block
     (attribute (identifier) (function (fn_param (reference)))))))

===
resource with array access on a property
===


resource "aws_api_gateway_method" "main" {
  for_each = var.endpoints

  resource_id      = aws_api_gateway_resource.route-nodes[each.key].id
}

---

(configuration
  (resource
    (resource_type)
    (resource_name)
    (block
     (attribute (identifier) (reference))
     (attribute (identifier) (reference)))))

===
reference in list without square brackets
===

resource "aws_security_group_rule" "s3" {
  prefix_list_ids   = [var.s3_prefix_list_id]
}

---

(configuration
  (resource (resource_type) (resource_name)
    (block
      (attribute (identifier) (list (reference))))))
